<resources>
    <string name="app_name">My Application</string>
    <string name="start">start</string>
    <string name="thread_traitement">Thread : traitement concurent ...</string>
    <string name="exemple2">Exemple2</string>
    <string name="exemple1">Exemple1</string>
    <string name="click_thread">click dans un thread !</string>
    <string name="exemple3">exemple3</string>
    <string name="exemple4">exemple4</string>
    <string name="exemple5">exemple5</string>
    <string name="exemple6">exemple6</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="nothing">nothing</string>
    <string name="notify">notify</string>
    <string name="td1">td1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_iam">Hello IAM !</string>
    <string name="open_fragment1">open fragment1</string>
    <string name="fragment_exemples">Fragment Exemples</string>
    <string name="open_fragment2">open fragment2</string>
    <string name="start_video">start video</string>
    <string name="start_audio">start audio</string>
    <string name="stop_audio">stop audio</string>
    <string name="take">Take</string>
    <string name="description">description</string>
    <string name="call">Call</string>
    <string name="exemple7">exemple 7</string>
    <string name="title_activity_maps">Map</string>
    <string name="exemple8">exemple 8</string>
    <string name="demarage">Demarage</string>
    <string name="open_map">open map</string>
    <string name="exemple_9">exemple 9</string>
    <string name="get_current_time">get current time</string>
    <string name="td3">td3</string>
    <string name="login">Login</string>
    <string name="td4" >td4</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="name">name</string>
</resources>