<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_thread_exemple1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exemple1"
        app:layout_constraintEnd_toStartOf="@+id/button_thread_exemple2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_thread_exemple2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exemple2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_thread_exemple3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exemple3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_thread_exemple2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_thread_exemple4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exemple4"
        app:layout_constraintStart_toStartOf="@+id/button_thread_exemple1"
        app:layout_constraintTop_toBottomOf="@+id/button_thread_exemple1" />

    <Button
        android:id="@+id/button_thread_exemple5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exemple5"
        app:layout_constraintStart_toStartOf="@+id/button_thread_exemple2"
        app:layout_constraintTop_toBottomOf="@+id/button_thread_exemple2" />

    <Button
        android:id="@+id/button_thread_exemple6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exemple6"
        app:layout_constraintStart_toStartOf="@+id/button_thread_exemple3"
        app:layout_constraintTop_toBottomOf="@+id/button_thread_exemple3" />

    <Button
        android:id="@+id/button_service_exemple1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="112dp"
        android:onClick="onClick"
        android:text="@string/exemple1"
        app:layout_constraintStart_toStartOf="@+id/button_thread_exemple4"
        app:layout_constraintTop_toBottomOf="@+id/button_thread_exemple4" />


</androidx.constraintlayout.widget.ConstraintLayout>